[package]
name = "rw-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
binrw = "0.11.1"
nom = "7.1.3"
nom-derive = "0.10.1"
num-derive = "0.4.2"
num-traits = "0.2.18"

[dev-dependencies]
bevy = "0.11.0"
clap = { version = "4.1.13", features = ["derive"] }
